[package]
name = "rustpotion"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = {version="0.12.9", features = ["blocking", "rustls-tls"], default-features = false }
safetensors = "0.4.5"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.42.0"
